Display: Rename modals styles to dialog

--- a/assets/css/scss/index.scss
+++ b/assets/css/scss/index.scss
@@ -67,7 +67,7 @@
 @include meta.load-css("organisms/datatable");
 @include meta.load-css("organisms/dataview");
 @include meta.load-css("organisms/external_logins");
-@include meta.load-css("organisms/modals");
+@include meta.load-css("organisms/dialog");
 @include meta.load-css("organisms/menu");
 @include meta.load-css("organisms/sidebar");
 @include meta.load-css("organisms/section_header");
