Course: Replace legacy links with hashed public URLs and enforce 'publish' check for certificates - refs #3536

--- a/public/main/template/default/gradebook/certificate_report.html.twig
+++ b/public/main/template/default/gradebook/certificate_report.html.twig
@@ -77,7 +77,8 @@ $(function () {
                 </td>
                 <td>
                     {% for certificate in student.certificates %}
-                        <a href="{{ _p.web }}certificates/index.php?id={{ certificate.id }}" class="btn btn--plain">
+                        {% set hash = certificate.path_certificate|split('.')|first %}
+                        <a href="{{ _p.web }}certificates/{{ hash }}.html" class="btn btn--plain">
                             <em class="fa fa-floppy-o"></em> {{ 'Certificate' | get_lang }}
                         </a>
                     {% endfor %}
