--- a/src/CoreBundle/Resources/views/User/overview.html.twig
+++ b/src/CoreBundle/Resources/views/User/overview.html.twig
@@ -72,7 +72,7 @@
                     <b>{{ 'Users subscribed to this course'|trans }}</b>
                     <ul style='list-style-type: disc; padding-left: 1.5vw;'>
                         {% for user in usersSubscribedToCourse %}
-                            <li class="user-display">{{ user.firstname }} {{ user.lastname }} ( {{ user.email }} )</li>
+                            <li class="user-display">{{ user.identity }} ( {{ user.email }} )</li>
                         {% endfor %}
                     </ul>
                 </div>
@@ -83,7 +83,7 @@
                     <b>{{ 'Users not subscribed to this course'|trans }}</b>
                     <ul style='list-style-type: disc; padding-left: 1.5vw;'>
                         {% for user in usersNotSubscribedToCourse %}
-                            <li class="user-display">{{ user.firstname }} {{ user.lastname }} ( {{ user.email }} )</li>
+                            <li class="user-display">{{ user.identity }} ( {{ user.email }} )</li>
                         {% endfor %}
                     </ul>
                 </div>
