Display: Add styles for BaseMultiSelect component

--- a/assets/css/scss/index.scss
+++ b/assets/css/scss/index.scss
@@ -42,6 +42,7 @@
 @include meta.load-css("atoms/input_switch");
 @include meta.load-css("atoms/input_text");
 @include meta.load-css("atoms/messages");
+@include meta.load-css("atoms/multiselect");
 @include meta.load-css("atoms/overlay");
 @include meta.load-css("atoms/password");
 @include meta.load-css("atoms/platform_logo");
