Link: Fix rounded icon preview style after Uppy crop - refs #2863

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -820,6 +820,11 @@ form .field {
   }
 }
 
+img.course-tool__icon {
+  @apply w-full h-full shadow object-cover;
+  border-radius: 0.5rem;
+}
+
 .row {
   @apply flex flex-wrap -mx-4;
 }
