Internal: Implement PWA support with manifest, icons, and service worker - refs #4961

--- a/src/CoreBundle/Resources/views/Layout/head.html.twig
+++ b/src/CoreBundle/Resources/views/Layout/head.html.twig
@@ -60,4 +60,7 @@
             {% endautoescape %}
         {% endblock %}
     {% endblock %}
+
+    <link rel="manifest" href="{{ asset('manifest.json') }}">
+    <meta name="theme-color" content="#1b4fa0">
 </head>
